Regression: Live unwrapping wraps hidden faces #103971

Closed
opened 2023-01-18 14:03:34 +01:00 by Gabriel Radić · 11 comments

System Information
Operating system: Windows 10
Graphics card: 6800 XT AMD

Blender Version
Broken: 3.4.1
Worked: 3.3.x
Caused by e3075f3cf7

Short Description
Live Unwrap in 3.4.1, wraps hidden faces while marking seams or doing any sort of unwrap, except if you MANUALLY wrap the faces, by click U-> Unwrap.
If the wrapping is manual (not live unwrapping) the features work as intended, and does not pack nor unwrap hidden faces.

Make a new cube, hide the rest of the faces and enable Live Unwrapping. Cut said face by marking seam, the rest of the faces will unwrap regardless if they are hidden or not.

Steps to Reproduce

  • Open attached file
  • make sure live unwrap is enabled in N panel of viewport
  • use {key alt h} to see hidden faces. and hide them again
  • for selected edge, mark seam
  • unhide hidden faces (there position is changed)
    LiveIssue.blend

image.png
image.png
image.png

How it should be:
image.png
image.png
image.png

**System Information** Operating system: Windows 10 Graphics card: 6800 XT AMD **Blender Version** Broken: 3.4.1 Worked: 3.3.x Caused by e3075f3cf7 **Short Description** Live Unwrap in 3.4.1, wraps hidden faces while marking seams or doing any sort of unwrap, except if you MANUALLY wrap the faces, by click U-> Unwrap. If the wrapping is manual (not live unwrapping) the features work as intended, and does not pack nor unwrap hidden faces. Make a new cube, hide the rest of the faces and enable Live Unwrapping. Cut said face by marking seam, the rest of the faces will unwrap regardless if they are hidden or not. **Steps to Reproduce** - Open attached file - make sure live unwrap is enabled in N panel of viewport - use {key alt h} to see hidden faces. and hide them again - for selected edge, mark seam - unhide hidden faces (there position is changed) [LiveIssue.blend](https://archive.blender.org/developer/F14173412/LiveIssue.blend) - - - ![image.png](https://archive.blender.org/developer/F14171886/image.png) ![image.png](https://archive.blender.org/developer/F14171889/image.png) ![image.png](https://archive.blender.org/developer/F14171892/image.png) How it should be: ![image.png](https://archive.blender.org/developer/F14171886/image.png) ![image.png](https://archive.blender.org/developer/F14171896/image.png) ![image.png](https://archive.blender.org/developer/F14171900/image.png)
Author

Added subscriber: @GabrielRadic

Added subscriber: @GabrielRadic

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Reminds me of #103237 (UV Unwrap changes nonselected uvs).
The steps to reproduce this bug are not clear.
Could you provide a simple .blend file and describe in more detail how to replicate the bug through it?

Reminds me of #103237 (UV Unwrap changes nonselected uvs). The steps to reproduce this bug are not clear. Could you provide a simple .blend file and describe in more detail how to replicate the bug through it?
Author

LiveIssue.blend

Added file.

So if you now cut (mark seam) the shown model, while live unwrap is on, the hidden part of it will be unwrapped again, even though it is hid.

[LiveIssue.blend](https://archive.blender.org/developer/F14173412/LiveIssue.blend) Added file. So if you now cut (mark seam) the shown model, while live unwrap is on, the hidden part of it will be unwrapped again, even though it is hid.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade changed title from Live unwrapping wraps hidden faces. Severe issue! to Regression: Live unwrapping wraps hidden faces 2023-01-19 07:53:42 +01:00
Member

Added subscriber: @Chris_Blackbourn

Added subscriber: @Chris_Blackbourn
Member

Guess Indeed this is affected by e3075f3cf7
@Chris_Blackbourn ^

~~Guess~~ Indeed this is affected by e3075f3cf7 @Chris_Blackbourn ^
Chris Blackbourn self-assigned this 2023-01-19 08:39:13 +01:00

Confirmed in debugger.
This is a 2 x Coffee problem.

Confirmed in debugger. This is a 2 x Coffee problem.

This issue was referenced by 6672b5373f

This issue was referenced by 6672b5373f172e32351ee4d233c8a434ff95417a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103971
No description provided.